--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -562,6 +562,7 @@ input[type=file]::-webkit-file-upload-button { /* chromes and blink button */
 
 .tooltip {
   position: absolute;
+  background-color: rgba(0, 0, 0, 0.2);
   padding: 0.375rem;
   border-radius: 0.45rem;
   transition: all 0.1s linear;
